--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -12,24 +12,14 @@ html {
 }
 
 #main {
-  /*  margin: 0rem 1.5rem; */
     font-family: 'Merriweather', serif;
-}
-
-@media only screen and (min-width:200px) and (max-width:480px) {
-    #main {
-        width: 100%;
-        margin: 0;
-    }
-
-    html {
-        overflow-x: hidden;
-    }
 }
 
 .container {
     display: flex;
 }
+
+/* header */
 
 header {
     height: 4rem;
@@ -108,15 +98,11 @@ nav a:hover {
     
 }
 
-
-
-
 /* Introduction Section */
 
 section:nth-of-type(odd){
     background-color: #C2D9FF;
 }
-
 
 .banner {
     width: 60%;
@@ -137,7 +123,6 @@ section:nth-of-type(odd){
 }
 
 .intro h1, p, a {
-   /* padding: 0rem 0rem 1.5rem 1.5rem; */
     line-height: 2rem;
     font-weight: 700;
 }
@@ -156,7 +141,6 @@ section:nth-of-type(odd){
     color: white;
     padding: 16px 32px;
     text-align: center;
-   /* margin: 4px 24px; */
     transition: 2s;
     opacity: 0.6;
     display: inline-block;
@@ -202,7 +186,6 @@ section:nth-of-type(odd){
         color: white;
         padding: 0.5rem 1rem;
         text-align: center;
-       /* margin: 4px 24px; */
         transition: 2s;
         opacity: 0.6;
         display: inline-block;
@@ -211,7 +194,6 @@ section:nth-of-type(odd){
     }
 
     .intro h1, p, a {
-        /* padding: 0rem 0rem 1.5rem 1.5rem; */
          line-height: 2rem;
          font-weight: 700;
      }
@@ -465,7 +447,6 @@ article img {
     }
 }
 
-
 /* footer */
 
 footer {
@@ -483,7 +464,6 @@ footer {
     padding-right: 1rem;
 }
 
-
 /* Mobile version screen min-width:200px max-width: 480px */
 @media only screen and (min-width:200px) and (max-width:480px) {
     .foot_nav {
@@ -491,8 +471,7 @@ footer {
     }
 }
 
-
-/* Mobile version screen max-width: 1024px */
+/* Mobile version screen min-width:768px max-width: 1024px */
 @media only screen and (min-width:768px) and (max-width:1024px) {
     footer {
         margin-top: 4rem;
