Center the nav to make them align on mobile view

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -79,8 +79,9 @@ nav a:hover {
     }
 
     header {
-        height: 4rem;
+        height: 4.5rem;
         justify-content: center;
+        align-items: baseline;
     }
 
     nav a {
