--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -82,6 +82,7 @@ nav a:hover {
         height: 4.5rem;
         justify-content: center;
         align-items: baseline;
+        margin-right: 4rem;
     }
 
     nav a {
